#
# Copyright (c) 2014 Scyphus Solutions Co. Ltd.  All rights reserved.
# Authors:
#      Hirochika Asai  <asai@scyphus.co.jp>
#

#SUBDIRS = 
#EXTRA_DIST = 
#noinst_HEADERS = 
#INCLUDES = -I$(top_srcdir)/include

bin_PROGRAMS = icapctl
#libexec_PROGRAMS = 
#lib_LIBRARIES = lib.a
#noinst_LIBRARIES = 
#lib_LTLIBRARIES = lib.la
#noinst_LTLIBRARIES = 
#EXTRA_LTLIBRARIES = 
icapctl_SOURCES = icapctl.c common/pid_output.c common/error.c
#lib_la_SOURCES = 
#prog_LDADD = lib.la
#prog_LDFLAGS = -static $(top_builddir)/libextra.la
#noinst_HEADERS = 

CLEANFILES = *~

#run: all
#	$(top_builddir)/.
#
#test: all
#	@echo "We have no test."
